--- a/tools/style.css
+++ b/tools/style.css
@@ -49,14 +49,14 @@ text-align: center;
 
 
 .transy{
-	width: 100%;
+width: 100%;
 height: 100%;
 float: left;
 bottom: 0%;
 position: absolute;
 z-index: -1;
-background: url(../images/background.jpg) no-repeat top center fixed; 
-opacity: 0.2;
+background: url(../images/GhostCobraNL_wallpaper.png) no-repeat top center fixed; 
+opacity: 0.7;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
@@ -86,7 +86,7 @@ background-size: cover;
 
 .header h1{
 	font-family: 'Anton', serif;
-	font-size: 150px;
+	font-size: 50px;
 	color: #fff;
 }
 
@@ -101,7 +101,7 @@ background-size: cover;
 	width: 60%;
 	text-align: center;
 	padding:0 20%;
-	margin-bottom: 30px;
+	margin-bottom: 160px;
 	float: left;
 }
 
@@ -109,13 +109,6 @@ background-size: cover;
 	font-size: 27px;
 	font-weight: 700;
 }
-
-
-
-
-
-
-
 
 .form{
 	width: 40%;
@@ -297,11 +290,6 @@ background-size: cover;
 	margin-bottom: 25px;
 	
 }
-
-
-
-
-
 
 }
 
