--- a/tools/style.css
+++ b/tools/style.css
@@ -56,7 +56,7 @@ bottom: 0%;
 position: absolute;
 z-index: -1;
 background: url(../images/GhostCobraNL_wallpaper.png) no-repeat top center fixed; 
-opacity: 0.7;
+opacity: 0.8;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
@@ -86,7 +86,7 @@ background-size: cover;
 
 .header h1{
 	font-family: 'Anton', serif;
-	font-size: 50px;
+	font-size: 40px;
 	color: #fff;
 }
 
@@ -171,7 +171,7 @@ background-size: cover;
 	width: 100%;
 	float: left;
 	font-size: 19px;
-	font-family: 'Lora', serif;
+	font-family: 'Anton', serif;
 	font-weight: 400;
 	cursor: pointer;
 	color: #fff;
@@ -256,7 +256,7 @@ background-size: cover;
 }
 
 .header h1{
-	font-size: 100px;
+	font-size: 20px;
 	color: #fff;
 }
 
